log
Thu 23 Mar 2023 07:11:28 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
1ee8077
Thu 23 Mar 2023 07:12:17 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
bf788ce
Thu 23 Mar 2023 07:13:22 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
035936f
Thu 23 Mar 2023 07:17:53 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8d14b23
Thu 23 Mar 2023 07:18:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cc0d33a
Thu 23 Mar 2023 07:19:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
18b3a89
Thu 23 Mar 2023 07:21:43 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
c125d7e
Thu 23 Mar 2023 07:24:33 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
d1574d4
Thu 23 Mar 2023 07:25:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f4902f
Thu 23 Mar 2023 07:25:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c81f2ff
Thu 23 Mar 2023 07:31:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
20c6263
Thu 23 Mar 2023 07:34:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
87ac58b
Thu 23 Mar 2023 07:37:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
dba87be
Thu 23 Mar 2023 07:47:03 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
f7741a1
Thu 23 Mar 2023 07:47:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
d0903d7
Thu 23 Mar 2023 07:53:20 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
61133a0
Thu 23 Mar 2023 07:53:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
a5ddb93
Thu 23 Mar 2023 07:57:14 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
7bf3e3c
Thu 23 Mar 2023 08:01:11 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
934a5a3
Thu 23 Mar 2023 08:02:50 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
cc100c0
Thu 23 Mar 2023 08:03:32 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
ac8f1fa
Thu 23 Mar 2023 08:07:31 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
798a567
Thu 23 Mar 2023 08:10:27 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
3361feb
Thu 23 Mar 2023 08:12:19 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
b8bc7da
Thu 23 Mar 2023 08:20:07 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
88b4d5d
Thu 23 Mar 2023 08:22:39 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
575f819
Thu 23 Mar 2023 08:28:07 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
e16ce85
Thu 23 Mar 2023 08:31:53 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
aa65264
Thu 23 Mar 2023 08:33:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
e01098d
Thu 23 Mar 2023 08:41:59 PM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  11|1
total_score: 55/70
da7dd15
Thu 23 Mar 2023 08:42:18 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
53fe26b
Thu 23 Mar 2023 08:48:31 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|1
total_score: 55/70
f31f75a
Thu 23 Mar 2023 08:53:19 PM UTC: 
 list.c | 28 ++++++++++++----------------
 1 file changed, 12 insertions(+), 16 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:118:9: error: unused variable ‘aux’ [-Werror=unused-variable]
  118 |   Node *aux = createNode(dato);
      |         ^~~
list.c:118:15: error: ‘dato’ is used uninitialized [-Werror=uninitialized]
  118 |   Node *aux = createNode(dato);
      |               ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
37ecb3b
Thu 23 Mar 2023 08:53:29 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|1
total_score: 55/70
91d143f
Thu 23 Mar 2023 08:59:56 PM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
ff76500
Thu 23 Mar 2023 09:02:31 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  11|1
total_score: 55/70
20aa900
Thu 23 Mar 2023 09:11:23 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
3830cad
Thu 23 Mar 2023 09:14:08 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  11|1
total_score: 55/70
56cc3b6
Thu 23 Mar 2023 09:17:38 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
b517f2b
Thu 23 Mar 2023 09:19:23 PM UTC: 
 list.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
 tests:  11|1
total_score: 55/70
152326c
Thu 23 Mar 2023 09:20:19 PM UTC: 
 list.c | 36 ++++++++++++++++++++++++++++++++++--
 1 file changed, 34 insertions(+), 2 deletions(-)
test.c: In function ‘cleanList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
2774524
Thu 23 Mar 2023 09:20:52 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccF4RStm.o: in function `cleanList':
test.c:(.text+0x234): undefined reference to `popFront'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccF4RStm.o: in function `test_pushcurrent':
test.c:(.text+0x8d4): undefined reference to `pushCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x929): undefined reference to `pushCurrent'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccF4RStm.o: in function `pushBack':
test.c:(.text+0x169): undefined reference to `pushCurrent'
collect2: error: ld returned 1 exit status
Compilation failed
e99124f
Thu 23 Mar 2023 09:22:26 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
test.c: In function ‘cleanList’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
37852d6
Thu 23 Mar 2023 09:22:38 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|0
total_score: 70/70
0c40db5
Thu 23 Mar 2023 09:24:03 PM UTC: 
 list.c | 33 +--------------------------------
 1 file changed, 1 insertion(+), 32 deletions(-)
 tests:  11|1
total_score: 55/70
814e1f5
Thu 23 Mar 2023 10:13:38 PM UTC: 
 list.c | 44 ++++++++++++++++----------------------------
 1 file changed, 16 insertions(+), 28 deletions(-)
 tests:  11|1
total_score: 55/70
02e9b9f
Thu 23 Mar 2023 10:18:06 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:125:5: error: unknown type name ‘returrn’
  125 |     returrn dato;
      |     ^~~~~~~
list.c:125:13: error: unused variable ‘dato’ [-Werror=unused-variable]
  125 |     returrn dato;
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
8196714
Thu 23 Mar 2023 10:18:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
5bc40ae
Thu 23 Mar 2023 10:23:13 PM UTC: 
 list.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
 tests:  12|0
total_score: 70/70
f398d0c
